# media-api-architecture

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  package.json  phase2-metadata-contract.md  phase3-abac-policy-foundation.md  pnpm-lock.yaml  turbo.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: code-review.instructions.md
.github/workflows/: ci-compose-smoke.yml  ci-contract.yml  ci-lint.yml  ci-rust.yml  ci-security.yml  ci-test.yml  release-images.yml  rollback.yml
apps/gateway-envoy/: Dockerfile  envoy.yaml  envoy.yaml.tpl
docs/runbooks/: rollback.md
infra/compose/: docker-compose.yml
infra/monitoring/: prometheus.yml
infra/oidc-mock/: README.md
infra/releases/: deployment-metadata.json
policies/: rbac.rego
policies/tests/: abac_test.rego  rbac_test.rego
proto/api/v1/: metadata.proto
scripts/: gen-proto.sh  generate-deployment-metadata.sh  health-report.sh  render-envoy-config.sh  rollback.sh
services/auth-api/: Cargo.toml  Dockerfile
services/auth-api/src/: lib.rs  main.rs
services/auth-api/tests/: auth_api_integration.rs
services/main-api/: Cargo.toml  Dockerfile  build.rs
services/main-api/src/: lib.rs  main.rs
services/main-api/tests/: main_api_integration.rs
tests/e2e-harness/: Cargo.toml
tests/e2e-harness/src/: lib.rs
tests/e2e-harness/tests/: gateway_e2e.rs
