[package]
name = "auth-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hmac.workspace = true
jsonwebtoken = "9"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tower = { version = "0.5", features = ["buffer", "limit", "load-shed"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
