[package]
name = "main-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true

[dev-dependencies]
prost-types.workspace = true
tokio.workspace = true
tonic.workspace = true
