[package]
name = "e2e-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
main-api = { path = "../../services/main-api" }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
